fix: post method for import
